product service fix

--- a/src/main/webapp/WEB-INF/app.properties
+++ b/src/main/webapp/WEB-INF/app.properties
@@ -18,8 +18,6 @@ development.hibernate.generate_statistics=true
 
 #Admin's CMS: Document Save Location
 files_location=C:\\testUpload\\
+#files_location=/tmp/
 
-#Gmail Credentials
-gmail_username=farooqsmasher070
-gmail_password=9986617484
 
