changes for ec2

--- a/src/main/webapp/WEB-INF/app.properties
+++ b/src/main/webapp/WEB-INF/app.properties
@@ -17,7 +17,7 @@ development.hibernate.use_sql_comments=true
 development.hibernate.generate_statistics=true
 
 #Admin's CMS: Document Save Location
-files_location=C:\\testUpload\\
-#files_location=/tmp/
+#files_location=C:\\testUpload\\
+files_location=/home/sammy/ftp/files/
 
 
